radix-engine-tests/tests/dec_macros/src/dec_err_invalid_digit.stderr
error: There is an invalid character.
 --> src/dec_err_invalid_digit.rs:4:29
  |
4 |     const X: Decimal = dec!(11.12e3);
  |                             ^^^^^^^
